gent/static/style.css
body						{ margin: 0; padding: 0; }
body *						{ font-family: Source Sans Pro; }

*							{ -moz-box-sizing: border-box; box-sizing: border-box; }

a							{ color: #1282da; text-decoration: none; }
a:hover						{ color: #000; }

.container					{ width: 90%; max-width: 550px; margin: 0px auto; }


/* Home */

#home						{ background: #333; color: #fff; }
#home .container			{ display: -webkit-flex; display: flex; align-items: stretch; padding: 5px 0; }
#home a						{ color: #fff; text-decoration: none; padding: 4px 0 5px; flex: 1; }
#home a:hover				{ color: #fbff95; }
#home a#add-item			{ text-align: center; background: #729b62; border-radius: 3px; }
#home a#add-item:hover		{ background: #111; color: #fff; }
#home a#logout-link			{ text-align: right; }


/* Search */

#search						{ background: #369; color: #fff; }
#search form				{ padding: .5em 0; display: -webkit-flex; display: flex; align-items: stretch; }
#search form input[type=text]	{ -webkit-flex: 12; flex: 12; font-size: 1em; padding: 4px 8px 5px; border: solid 1px #47a; border-radius: 3px; font-weight: 600; }
#search form button			{ -webkit-flex: 2; flex: 2; min-width: 4em; background: #4c8cc7; color: #fff; font-size: 1em; padding: 4px 8px 5px; border: none; border-radius: 3px; cursor: pointer; margin-left: 0; margin-right: 0; -webkit-appearance: none; }
#search form button:hover	{ background: #111; }


/* Items */

ul.items					{ padding: .5em 0; list-style: none; background: #eee; font-size: 1.1em; margin-top: .45em; }
ul.items > li				{ list-style: none; cursor: pointer; }
ul.items > li > a			{ display: block; padding: .5em .6em; background: #fff; border-radius: 5px; line-height: 1.2em; border: solid 1px #ddd; box-shadow: 0 1px 3px #ddd; cursor: pointer; }
ul.items > li > a:hover		{ background: #000; color: #fff; }
ul.items > li + li			{ margin-top: .5em; }
ul.items > li label			{ display: block; line-height: 1.1em; cursor: pointer; }
ul.items > li div.sub		{ font-size: .8em; color: rgba(0, 0, 0, 0.4); line-height: 1.2em; margin-top: 3px; }
ul.items > li > a:hover div.sub		{ color: rgba(255, 255, 255, 0.4); }

ul.items.linkless > li 		{ display: block; padding: .5em .6em; background: #fff; border-radius: 5px; line-height: 1.2em; border: solid 1px #ddd; box-shadow: 0 1px 3px #ddd; }

ul.items.completed			{ padding: 0; background: none; font-size: .8em; margin-top: .6em; }
ul.items.completed > li		{ padding: 0; background: none; border: none; box-shadow: none; color: #aaa; text-decoration: line-through; }
ul.items.completed > li + li	{ }

ul.items li.placeholder		{ height: 2em; background: rgba(0, 0, 0, 0.1); border: dotted 1px #999; box-shadow: none; }


/* Target page */

#target-header				{ margin-top: 1em; }
#target-header h2			{ font-weight: 400; margin: 0; font-size: 1.2em; line-height: 1.1em; }
#target-header h2 span		{ display: block; font-size: .7em; color: #aaa; }
#target-header h2 + h2		{ margin-top: .5em; }


/* Notes */

#notes						{ margin-top: 1.5em; }
#notes h2					{ margin-bottom: .3em; }
#notes p:first-child		{ margin-top: 0; }
#notes p:last-child			{ margin-bottom: 0; }
#notes ul:first-child		{ margin-top: 0; }
#notes ul:last-child		{ margin-bottom: 0; }
#notes p					{ margin: .75em 0; }
#notes ul					{ margin: .75em 0; }

ul.items li #notes			{ margin-top: 0em; }


/* Section */

section						{ margin-top: 1.5em; }
section h2					{ font-weight: 400; font-size: 1em; line-height: 1.1em; color: #6993b4; }


/* Targets */

ul.targets					{ padding: .5em 0; list-style: none; background: #eee; font-size: 1.1em; margin-top: .45em; }
ul.targets > li				{ list-style: none; cursor: pointer; }
ul.targets > li + li			{ margin-top: .5em; }
ul.targets > li > a				{ display: block; padding: .5em .6em; background: #3e639b; border-radius: 5px; border: solid 1px #ddd; box-shadow: 0 1px 3px #ddd; color: #fff; }
ul.targets > li > a:hover		{ background: #000; }
ul.targets > li > a label		{ display: block; line-height: 1.1em; color: #fff; cursor: pointer; }
ul.targets > li > a div.sub		{ font-size: .8em; color: rgba(255, 255, 255, 0.4); line-height: 1.2em; margin-top: 3px; }


/* Tags */

ul.tags						{ padding: 0; list-style: none; font-size: .9em; }
ul.tags li					{ display: inline-block; line-height: 1.5em; margin-right: .5em; }
ul.tags li:last-child		{ margin-right: 0; }

h2 + ul.tags				{ margin-top: .5em; }



/* Media queries */
@media screen and (min-width: 700px) {
	ul.targets				{ padding-top: 1em; padding-bottom: 1em; }
	ul.items				{ padding-top: 1em; padding-bottom: 1em; }
}

